--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,81 @@
 </div>
 </div>
 <!-- Plantillas de Mensajes -->
-
+<div class="card bg-white p-6 rounded-xl">
+<h3 class="text-xl font-semibold mb-6">
+         Plantillas de Mensajes
+        </h3>
+<div class="space-y-4">
+<div class="border-l-4 border-blue-500 pl-4">
+<h4 class="font-semibold text-green-600">
+           Equipo Recibido
+          </h4>
+<p class="text-sm text-gray-600">
+           Hola [Nombre], hemos recibido su [Equipo]. Le mantendremos informado del progreso. Ticket: [Ticket]
+          </p>
+</div>
+<div class="border-l-4 border-yellow-500 pl-4">
+<h4 class="font-semibold text-green-600">
+           Diagnóstico Listo
+          </h4>
+<p class="text-sm text-gray-600">
+           Hola [Nombre], hemos diagnosticado su [Equipo]. [Problema]. Costo estimado: $[Costo]. ¿Autoriza la reparación?
+          </p>
+</div>
+<div class="border-l-4 border-green-500 pl-4">
+<h4 class="font-semibold text-green-600">
+           Equipo Listo
+          </h4>
+<p class="text-sm text-gray-600">
+           ¡Buenas noticias! Su [Equipo] está listo para retirar. Costo total: $[Costo]. Horario: Lun-Vie 9-18hs, Sáb 9-13hs
+          </p>
+</div>
+<div class="border-l-4 border-red-500 pl-4">
+<h4 class="font-semibold text-green-600">
+           Recordatorio - Equipo Listo
+          </h4>
+<p class="text-sm text-gray-600">
+           Hola [Nombre], su [Equipo] está listo para retirar desde hace varios días. Por favor coordine su retiro. Gracias.
+          </p>
+</div>
+        <div class="border-l-4 border-gray-500 pl-4">
+<h4 class="font-semibold text-green-600">
+           No Reparable
+          </h4>
+<p class="text-sm text-gray-600">
+           Hola [Nombre], lamentablemente su [Equipo] no se puede reparar debido a [Problema]. Puede pasar a retirarlo sin cargo. Gracias.
+          </p>
+        </div>
+</div>
+<div class="mt-8">
+<h4 class="font-semibold mb-4">
+          Historial de Envíos
+         </h4>
+<div class="overflow-x-auto">
+<table class="w-full text-sm">
+<thead>
+<tr class="border-b">
+<th class="text-left py-2">
+              Cliente
+             </th>
+<th class="text-left py-2">
+              Mensaje
+             </th>
+<th class="text-left py-2">
+              Estado
+             </th>
+<th class="text-left py-2">
+              Fecha
+             </th>
+</tr>
+</thead>
+<tbody id="historial-mensajes">
+<!-- Se llena dinámicamente -->
+</tbody>
+</table>
+</div>
+</div>
+</div>
 </div>
 </div>
 <!-- Formulario de Pedidos -->
@@ -1260,6 +1334,11 @@
           </label>
 <input class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" name="email" required="" type="email" value="info@fixlytaller.com"/>
 </div>
+<div>
+  <label class="block text-sm font-medium text-gray-700 mb-2">Condiciones de garantía (plantilla)</label>
+  <textarea name="garantia_plantilla" rows="5" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500" placeholder="Texto de garantía del taller (se guarda como plantilla)."></textarea>
+</div>
+
 <button class="w-full bg-blue-600 text-white py-3 px-4 rounded-lg hover:bg-blue-700 transition duration-200 flex items-center justify-center" type="submit">
 <i class="fas fa-save mr-2">
 </i>
@@ -1268,7 +1347,7 @@
 </form>
 </div>
 <!-- Gestión de Técnicos -->
-<div class="self-start card bg-white p-4 rounded-xl" style="align-self:start">
+<div class="card bg-white p-4 rounded-xl self-start" style="align-self:start">
 <div class="flex justify-between items-center mb-6">
 <h3 class="text-xl font-semibold flex items-center">
 <i class="fas fa-users-cog text-green-600 mr-2">
@@ -1281,7 +1360,7 @@
           Agregar
          </button>
 </div>
-<div class="space-y-3" id="lista-tecnicos" style="max-height:260px;overflow:auto;">
+<div class="space-y-3" id="lista-tecnicos">
 <div class="border border-gray-200 rounded-lg p-3 hover:bg-gray-50">
 <div class="flex justify-between items-center">
 <div>
@@ -1335,7 +1414,7 @@
 </div>
 <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mt-8">
 <!-- Sistema y Seguridad -->
-<div class="card bg-white p-6 rounded-xl">
+<div class="card bg-white p-4 rounded-xl">
 <h3 class="text-xl font-semibold mb-6 flex items-center">
 <i class="fas fa-shield-alt text-orange-600 mr-2">
 </i>
@@ -1362,7 +1441,7 @@
 </div>
 </div>
 <!-- Respaldo y Datos -->
-<div class="card bg-white p-6 rounded-xl">
+<div class="card bg-white p-4 rounded-xl">
 <h3 class="text-xl font-semibold mb-6 flex items-center">
 <i class="fas fa-database text-purple-600 mr-2">
 </i>
@@ -3497,6 +3576,8 @@ function imprimirComprobantePedido(pedidoId){
                         direccion: formData.get('direccion'),
                         telefono: formData.get('telefono'),
                         email: formData.get('email')
+                    ,
+                        garantia_plantilla: formData.get('garantia_plantilla')
                     };
                     
                     guardarConfiguracion();
@@ -5071,7 +5152,22 @@ function solicitarTelefono(cliente, valorInicial){
         Array.from(tbh.querySelectorAll("tr")).forEach(tr=>{
           const first = tr.querySelector("td");
           if (first && /^#?MSG-/i.test(first.textContent.trim())) tr.remove();
-        });
+        
+      try{
+        // Marcar borrado y limpiar TODOS los storages
+        localStorage.setItem('__wspCleared','1');
+        localStorage.removeItem('historialMensajesME');
+        localStorage.removeItem('historialWsp');
+        const raw = localStorage.getItem('fixlytallerData');
+        if (raw){
+          const data = JSON.parse(raw);
+          if (data && Array.isArray(data.historialMensajes)){
+            data.historialMensajes = [];
+            localStorage.setItem('fixlytallerData', JSON.stringify(data));
+          }
+        }
+      }catch(_){}
+    });
       }
       alert("Historial borrado.");
     };
@@ -5179,7 +5275,7 @@ on = function(){
   function showFullHistory(){
     // Merge storages, prefer modern entries
     const a = loadHist();
-    const b = loadLegacy();
+    const b = (localStorage.getItem('__wspCleared')==='1') ? [] : loadLegacy();
     // Simple merge by stringified content to avoid duplicates
     const seen = new Set();
     const all = [];
